# ludmilladb

./: .autotools  .cproject  .gitignore  .gitmodules  .project  AUTHORS  MAINTAINERS  Makefile.am  Makefile.in  README  README.md  _maintainers.sh  configure  configure.ac
data/: Makefile.am  ludmilladb.desktop.in.in
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
include/str_builder/: Makefile.am  Makefile.in  str_builder.c  str_builder.h
po/: POTFILES.in  POTFILES.skip  nl.po
res/: res.gresource.xml  window.css  window.ui  window.ui~
scripts/: hexdump.sh  install.sh  nm.sh  uninstall.sh
src/: Makefile.am  Makefile.in  backend.vala  backend_sqlite.vala  frontend.vala  ludmilla.c  ludmilla.h  ludmilladb.vala  session.vala  session_gda.vala
src/deployer/: Makefile.am  Makefile.in  deployer.c  deployer.h
src/provider/: provider.h  router.c  router.h
src/provider/all/: sqlite.h
src/type/: boolean.h  w_stage.h
src/w_chooser/: w_chooser.c  w_chooser.h
src/w_session/: w_session.c  w_session.h
vapi/: Makefile.am  config.vapi  libgda-5.0.vapi
